[gd_scene load_steps=8 format=3 uid="uid://b2shan3em01g3"]

[ext_resource type="Script" path="res://examples/2d/rich_text/example.gd" id="1_gt4q6"]
[ext_resource type="Script" path="res://addons/maze_generator/maze.gd" id="2_atk16"]
[ext_resource type="Script" path="res://addons/maze_generator/maze_grid.gd" id="3_2m2vd"]
[ext_resource type="Theme" uid="uid://bjemcxo6mk3o0" path="res://examples/assets/themes/settings_theme.tres" id="3_mbxpp"]
[ext_resource type="Theme" uid="uid://dlu0hbktlkj8x" path="res://examples/assets/themes/grid_preview_theme.tres" id="4_b072u"]
[ext_resource type="FontFile" uid="uid://cmunte0hjobbi" path="res://examples/assets/fonts/roboto_mono/static/RobotoMono-Bold.ttf" id="5_cstjk"]

[sub_resource type="Resource" id="Resource_yl8xv"]
script = ExtResource("3_2m2vd")
size = Vector2i(16, 8)
start_coords = Vector2i(-1, -1)
start_color = Color(0, 1, 0, 1)
end_color = Color(1, 1, 0, 1)
terminal_color = Color(1, 0, 0, 1)
path_color = Color(0.745098, 0.745098, 0.745098, 1)
wall_color = Color(0.411765, 0.411765, 0.411765, 1)

[node name="Example" type="Node2D"]
script = ExtResource("1_gt4q6")
show_progress_bar = true

[node name="Maze" type="Node2D" parent="."]
script = ExtResource("2_atk16")
grid = SubResource("Resource_yl8xv")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2560.0
offset_bottom = 1440.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_mbxpp")
tab_alignment = 1
current_tab = 0

[node name="Preview" type="CenterContainer" parent="TabContainer"]
layout_mode = 2
theme = ExtResource("4_b072u")
metadata/_tab_index = 0

[node name="MazePreview" type="RichTextLabel" parent="TabContainer/Preview"]
clip_contents = false
layout_mode = 2
tooltip_text = "Press 'R' to regenerate the maze."
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="ProgressBar" type="ProgressBar" parent="TabContainer/Preview"]
visible = false
custom_minimum_size = Vector2(1200, 60)
layout_mode = 2

[node name="Settings" type="CenterContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
metadata/_tab_index = 1

[node name="List" type="VBoxContainer" parent="TabContainer/Settings"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
alignment = 1

[node name="SettingsLabel" type="Label" parent="TabContainer/Settings/List"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cstjk")
theme_override_font_sizes/font_size = 36
text = "MazeGrid Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsLabelSeparator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="GridXLabel" type="Label" parent="TabContainer/Settings/List"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
text = "Grid Width"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridX" type="HSlider" parent="TabContainer/Settings/List"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
min_value = 4.0
max_value = 64.0
value = 8.0
rounded = true
ticks_on_borders = true

[node name="GridXSeperator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2

[node name="GridYLabel" type="Label" parent="TabContainer/Settings/List"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
text = "Grid Height"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridY" type="HSlider" parent="TabContainer/Settings/List"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
min_value = 4.0
max_value = 20.0
value = 8.0
rounded = true
ticks_on_borders = true

[node name="GridYSeperator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="StartCoordsLabel" type="Label" parent="TabContainer/Settings/List"]
layout_mode = 2
text = "Start Position"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartCoordsLabelSeperator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2

[node name="StartCoordsContainer" type="HBoxContainer" parent="TabContainer/Settings/List"]
layout_mode = 2
alignment = 1

[node name="StartXLabel" type="Label" parent="TabContainer/Settings/List/StartCoordsContainer"]
layout_mode = 2
text = "X:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartX" type="SpinBox" parent="TabContainer/Settings/List/StartCoordsContainer"]
layout_mode = 2
min_value = -1.0
max_value = 64.0
value = -1.0
rounded = true
alignment = 1

[node name="VSeparator" type="VSeparator" parent="TabContainer/Settings/List/StartCoordsContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 2.08165e-12)
layout_mode = 2

[node name="StartYLabel" type="Label" parent="TabContainer/Settings/List/StartCoordsContainer"]
layout_mode = 2
text = "Y:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartY" type="SpinBox" parent="TabContainer/Settings/List/StartCoordsContainer"]
layout_mode = 2
min_value = -1.0
max_value = 20.0
value = -1.0
alignment = 1

[node name="StartCoordsSeparator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="PreviewOptionsLabel" type="Label" parent="TabContainer/Settings/List"]
layout_mode = 2
text = "Preview Loading Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewOptionsLabelSeparator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2

[node name="PreviewOptionShowNothing" type="CheckButton" parent="TabContainer/Settings/List"]
layout_mode = 2
button_pressed = true
text = "Show Nothing (Fastest)"

[node name="PreviewOptionShowProgressBar" type="CheckButton" parent="TabContainer/Settings/List"]
layout_mode = 2
text = "Show Progress Bar"

[node name="PreviewOptionShowMaze" type="CheckButton" parent="TabContainer/Settings/List"]
layout_mode = 2
text = "Show Maze"

[node name="PreviewOptionsSeparator" type="HSeparator" parent="TabContainer/Settings/List"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="Preview" type="Button" parent="TabContainer/Settings/List"]
layout_mode = 2
text = "Preview"
